# CL-Bmp

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  ConfigMain.py  Doxyfile  LICENSE.md  README.md  init.sh
docs/: Alloc_8h_source.html  Alloc_8hpp_source.html  Arr_8h_source.html  Arr_8hpp_source.html  BitVec_8h_source.html  BitVec_8hpp_source.html  Buff_8h_source.html  Call_8h_source.html  Cast_8h_source.html  Compare_8h_source.html  Dest_8h_source.html  Dot_8h_source.html  Dot_8hpp_source.html  Head_8h_source.html  Idxer_8h_source.html  Idxer_8hpp_source.html  Src_8hpp_source.html  annotated.html  annotated_dup.js  build_2external_2ae2f_2Core_2include_2ae2f_2Bmp_2Src_8h_source.html  classes.html  dir_0829f698cd36d8692a655be6845dbb1d.html  dir_0829f698cd36d8692a655be6845dbb1d.js  dir_16dac43800044cf0b6db9998de6d92a6.html  dir_16dac43800044cf0b6db9998de6d92a6.js  dir_491f97aec4da9f0dab5724e3b32d9056.html  dir_491f97aec4da9f0dab5724e3b32d9056.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_640e81aed3143c7e828f7c443eb8d8d5.html  dir_640e81aed3143c7e828f7c443eb8d8d5.js  dir_65bb661aaebc4034fe91c05b53d3d04b.html  dir_65bb661aaebc4034fe91c05b53d3d04b.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7a755a6e84b52bdcd9040632bf35027f.html  dir_7a755a6e84b52bdcd9040632bf35027f.js  dir_a3eb940c9ec0e3f5269a3fc6acfd1159.html  dir_a3eb940c9ec0e3f5269a3fc6acfd1159.js  dir_a57a94e38c03835eed49274b75b0176d.html  dir_a57a94e38c03835eed49274b75b0176d.js  (+87 more)
docs/search/: all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_2.js
include/ae2f/BmpCL/: BmpCL.h  Buff.h  Dest.h  Programme.h  Src.h
include/ae2fCL/Bmp/: Bmp.h  Buff.h  Dest.h  Programme.h  Rect.h  Src.h
src/: Bmp.c  BmpCL.c  Buff.c  Buffer.cl  Programme.c  a.cl  xProgramme.cpp
src/Programme/: lib.cl.c
test/: CMakeLists.txt
test/src/: CompileTest.c  MimicTest.c
test/t0/: CMakeLists.txt  CompileTest.c  MimicTest.c  main.c  main.cpp  test.h
